# PyRQP

./: 404.html  README.md  feed.xml  index.html  pyproject.toml  robots.txt  sitemap.xml
assets/css/: main.css  main.css.map
assets/img/: wave_emoji.png:Zone.Identifier
blog/: index.html
blog/2015/: index.html
blog/2015/code/: index.html
blog/2015/disqus-comments/: index.html
blog/2015/formatting-and-links/: index.html
blog/2015/images/: index.html
blog/2015/math/: index.html
blog/2020/: index.html
blog/2020/github-metadata/: index.html
blog/2020/twitter/: index.html
blog/2021/: index.html
blog/2021/diagrams/: index.html
blog/2021/distill/: index.html
blog/2022/: index.html
blog/2022/giscus-comments/: index.html
blog/2022/redirect/: index.html
blog/2023/: index.html
blog/2023/audios/: index.html
blog/2023/custom-blockquotes/: index.html
blog/2023/jupyter-notebook/: index.html
blog/2023/sidebar-table-of-contents/: index.html
blog/2023/table-of-contents/: index.html
blog/2023/tables/: index.html
blog/2023/videos/: index.html
blog/category/blockquotes/: index.html
blog/category/external-services/: index.html
blog/category/jupyter-notebook/: index.html
blog/category/sample-posts/: index.html
blog/category/sidebar/: index.html
blog/category/toc/: index.html
blog/page/2/: index.html
blog/page/3/: index.html
blog/page/4/: index.html
blog/tag/audios/: index.html
cv/: index.html
news/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
notebooks/: dist_test.ipynb  pyrqp_poc-Copy1.ipynb  pyrqp_poc.ipynb  rqp.ipynb  rqp_batch_example.ipynb  rqp_simple_example.ipynb
notebooks/data/: rqp_output.xlsx  template.xlsx
projects/: index.html
projects/1_project/: index.html
projects/2_project/: index.html
projects/3_project/: index.html
projects/4_project/: index.html
projects/5_project/: index.html
projects/6_project/: index.html
publications/: index.html
repositories/: index.html
src/PyRQP/: Docs.docx  black_mc.for  decay.py  links.txt  log_to_normal.ipynb  rqp.ipynb  rqp.py  rqp_bespoke_normal.ipynb  rqp_test.ipynb  rqp_utils.py  test_multivariate_func.ipynb  utils.py
src/PyRQP/SS/: rqp.vba  (+1 more)
tests/: test_1.ipynb
(+7 files in other folders)
