[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrqp"
version = "0.0.1"
authors = [
  { name="Pau Juan-Garcia", email="Pau.JuanGarcia@atkinsglobal.com" },
]
description = "A Python version of the Environment Agency's River Quality Planning (RQP) software"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PauJuan/PyRQP"
"Bug Tracker" = "https://github.com/PauJuan/PyRQP/issues"
